Closes #7 #13: fix content text overflow
본문 내용 넘쳐보이는 경우 해결
css - overflow-wrap 설정

--- a/post.css
+++ b/post.css
@@ -177,6 +177,7 @@
     font-size: 15px;
     line-height: 21.15px;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .cntBtn {
